syntax = "proto3";

package warehouse;

// Definition of Warehouse service
service Warehouse {
  // Check all products data
  rpc CheckStockLevel (CheckStockRequest) returns (StockLevelResponse) {}

  // Set stock alert
  rpc SetStockAlert (SetStockAlertRequest) returns (SetStockAlertResponse) {}

  // Colect/Pick item in the warehouse
  rpc PickItem (PickItemRequest) returns (PickItemResponse) {}

  // Place a repo order
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse) {}

}

// Messages of response
message CheckStockRequest {}

message StockLevelResponse {
  repeated Product products = 1;
}

message SetStockAlertRequest {
  string itemId = 1;
  int32 newLowQnt = 2;
}

message SetStockAlertResponse {
  string message = 1;
}

message PickItemRequest {
  string itemId = 1;
  int32 quantityToPick = 2;
}

message PickItemResponse {
  string message = 1;
}

message PlaceOrderRequest {
  string itemId = 1;
  int32 quantityToOrder = 2;
}

message PlaceOrderResponse {
  string message = 1;
}

// Product message
message Product {
  int32 itemId = 1;
  string itemName = 2;
  int32 itemQuantity = 3;
  int32 lowQnt = 4;
  int32 overQnt = 5;
}
